spacing fix

--- a/src/components/alerts/alerts.less
+++ b/src/components/alerts/alerts.less
@@ -62,7 +62,7 @@
   margin-bottom: @spacing-m;
 }
 
-.alert-results .react-bs-table-container {
+.alerts-table.react-bs-table-container {
   margin-top: 0
 }
 
